--- a/bazadel/templates/includes/team.html
+++ b/bazadel/templates/includes/team.html
@@ -14,7 +14,7 @@
                                 <img src="{% static 'img/team-1.jpg' %}" class="img-fluid w-20 rounded-circle" alt="">
                             </div>
                             <div class="team-name text-center py-3">
-                                <h4 class="">Светлана Юрьевна</h4>
+                                <h4 class="">Светлана </h4>
                                 <p class="m-0">Инженер данных</p>
                             </div>
                             <div class="team-icon d-flex justify-content-center pb-4">
@@ -33,7 +33,7 @@
                                 <img src="{% static 'img/team-2.jpg' %}" class="img-fluid w-20 rounded-circle" alt="">
                             </div>
                             <div class="team-name text-center py-3">
-                                <h4 class="">Артем Михайлович</h4>
+                                <h4 class="">Владимир </h4>
                                 <p class="m-0">Web-разработчик</p>
                             </div>
                             <div class="team-icon d-flex justify-content-center pb-4">
@@ -52,7 +52,7 @@
                                 <img src="{% static 'img/team-3.jpg' %}" class="img-fluid w-20 rounded-circle" alt="">
                             </div>
                             <div class="team-name text-center py-3">
-                                <h4 class="">Ксения Викторовна</h4>
+                                <h4 class="">Ксения </h4>
                                 <p class="m-0">Копирайтер</p>
                             </div>
                             <div class="team-icon d-flex justify-content-center pb-4">
@@ -71,7 +71,7 @@
                                 <img src="{% static 'img/team-4.jpg' %}" class="img-fluid w-20 rounded-circle" alt="">
                             </div>
                             <div class="team-name text-center py-3">
-                                <h4 class="">Стефан Ильич</h4>
+                                <h4 class="">Стефан </h4>
                                 <p class="m-0">Разработчик</p>
                             </div>
                             <div class="team-icon d-flex justify-content-center pb-4">
@@ -90,7 +90,7 @@
                                 <img src="{% static 'img/team-5.jpg' %}" class="img-fluid w-20 rounded-circle" alt="">
                             </div>
                             <div class="team-name text-center py-3">
-                                <h4 class="">Софья Алексеевна</h4>
+                                <h4 class="">Софья </h4>
                                 <p class="m-0">Дизайнер</p>
                             </div>
                             <div class="team-icon d-flex justify-content-center pb-4">
